added sonar issues